--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -216,11 +216,14 @@ body::-webkit-scrollbar-track {
   animation: slide-out-fwd-bl_lzy 2s 1;
 }
 
+html body.compensate-for-scrollbar {
+  overflow: auto !important;
+}
+
 html,
 body {
   scroll-behavior: smooth;
   font-family: 'firaCode' !important;
-  overflow: auto !important;
 }
 
 body.loading {
