切换接口、文章列表、文章详情列表、评论接口

--- a/src/assets/css/contentDetail.less
+++ b/src/assets/css/contentDetail.less
@@ -4,8 +4,8 @@
   height: auto;
   padding-bottom: 20px;
   background: rgb(255, 255, 255);
-  background-image: linear-gradient(#a1a6c9 2px, transparent 0),
-    linear-gradient(90deg, #a1a6c9 1px, transparent 0);
+  background-image: linear-gradient(#e0e0e0 2px, transparent 0),
+    linear-gradient(90deg, #e0e0e0 1px, transparent 0);
   background-size: 28px 28px;
   background-repeat: repeat;
 
