修改部分css、修改动画效果

--- a/src/assets/css/contentDetail.less
+++ b/src/assets/css/contentDetail.less
@@ -332,12 +332,14 @@
                 box-shadow: inset 0 0 10px 1px var(--themeColor);
                 filter: blur(1px);
                 transition: 0.1s ease-in;
+                z-index: 6;
               }
 
               img {
                 width: 45px;
                 border-radius: 50%;
                 cursor: var(--linkCup);
+                animation-duration: 0.5s;
               }
 
             }
