--- a/src/assets/css/essay.less
+++ b/src/assets/css/essay.less
@@ -100,6 +100,10 @@ code {
     text-decoration: none;
   }
 
+  &:not(.custom) img {
+    max-width: 99.3%;
+  }
+
   h1,
   h2,
   h3,
@@ -138,7 +142,7 @@ code {
     font-weight: 600;
 
     &:before {
-      content: "⏔";
+      content: "🌠";
       color: var(--themeColor);
       margin-right: 20px;
     }
