🔧chore：修复首页文章不显示类型的问题

--- a/src/assets/css/contentDetail.less
+++ b/src/assets/css/contentDetail.less
@@ -77,6 +77,7 @@
     position: absolute;
     bottom: 20px;
     left: 50%;
+    height: 130px;
     transform: translateX(-50%);
     color: #fff;
     text-shadow: 1px 2px 4px #000;
@@ -85,12 +86,14 @@
   .topTitle h1 {
     font-size: 40px;
     margin-bottom: 20px;
+    margin-top: 0;
     font-family: 'dindin';
   }
 
   .topTitle p {
     font-size: 20px;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
+    margin-top: 0;
     text-indent: 0
   }
 
@@ -415,7 +418,7 @@
 
     .affix-container {
       position: absolute;
-      top: 460px;
+      top: 440px;
       right: calc(50% - 554px - 290px);
       background-color: #fff;
       font-size: 16px;
