🔧chore：更换字体Fira Code VF

--- a/src/assets/css/essay.less
+++ b/src/assets/css/essay.less
@@ -78,7 +78,8 @@ code {
 }
 
 .v-md-prism-language {
-  font-family: 'firaCode' !important;
+  font-family: 'Fira Code VF';
+  font-variation-settings: 'wght' 430;
 }
 
 .vuepress-markdown-body {
@@ -231,7 +232,8 @@ code {
   .line-number,
   code,
   kbd {
-    font-family: 'firaCode' !important;
+    font-family: 'Fira Code VF';
+    font-variation-settings: 'wght' 430;
   }
 
   mark {
@@ -380,3 +382,5 @@ code {
     color: #fff;
   }
 }
+
+@import url('./code.less');
