--- a/src/assets/css/contentDetail.less
+++ b/src/assets/css/contentDetail.less
@@ -1,6 +1,6 @@
 .detail {
   width: 100%;
-  overflow-x: hidden;
+  // overflow-x: hidden;
   height: auto;
   padding-bottom: 20px;
   background: rgb(255, 255, 255);
@@ -64,7 +64,7 @@
   .imgtop img {
     filter: brightness(0.5);
     width: 100%;
-    height: 400px;
+    height: 100%;
     object-fit: cover;
     position: absolute;
     top: 0;
@@ -142,6 +142,7 @@
     padding: 10px;
     background-color: var(--themeColor);
     position: relative;
+    flex: 1;
 
     & .before {
       user-select: none;
@@ -222,9 +223,10 @@
     height: 300px;
     display: flex;
     justify-content: space-between;
+    gap: 10px;
+    flex-wrap: wrap;
 
     &>.borderw {
-      width: 49%;
       box-sizing: border-box;
 
       span {
@@ -414,22 +416,24 @@
   }
 
   .bodyMain {
-    
+    width: 1420px;
+    margin: 0 auto;
+    display: flex;
+    gap: 10px;
 
     .affix-container {
-      position: absolute;
-      top: 440px;
-      right: calc(50% - 554px - 290px);
       background-color: #fff;
       font-size: 16px;
+      margin-top: 40px;
       z-index: 1;
-      // width: 200px;
+      width: 288px;
       height: calc(100% - 20px);
       background-color: transparent;
       // padding-top: 10px;
       padding-bottom: 10px;
       transition: .3s;
       animation-duration: 0.5s;
+      flex-shrink: 0;
 
       .affix {
         position: sticky;
@@ -521,6 +525,110 @@
           }
         }
       }
+    }
+  }
+}
+
+@media (max-width:1440px) {
+  .detail {
+    .center {
+      width: auto;
+    }
+
+    .bodyMain {
+      width: 100%;
+
+      .affix-container {}
+    }
+  }
+}
+
+@media (max-width:1280px) {
+  .detail {
+    .center {
+      width: calc(var(--centerWidth) - 10px);
+    }
+
+    .publish {
+      flex-direction: column-reverse;
+      height: auto;
+      gap: 0;
+    }
+
+    .bodyMain {
+
+      .affix-container {
+        // display: none;
+
+      }
+    }
+  }
+}
+
+@media (max-width:1130px) {
+  .detail {
+
+    .publish {}
+
+    .bodyMain {
+
+      .affix-container {
+        display: none;
+
+      }
+    }
+  }
+}
+
+@media (max-width:575px) {
+
+  .detail {
+    padding-bottom: 0;
+
+    .imgtop {
+      height: 258px;
+    }
+
+    .center {
+      width: var(--centerWidth);
+      margin: 0 0;
+      padding: 5px;
+    }
+
+    .oldtosiTion {
+      width: 100%;
+      margin: 0;
+      padding: 0 0;
+
+      .borderw {
+        width: 100%;
+        margin-bottom: 0;
+
+        .comment>p {
+          display: flex;
+          justify-content: center;
+
+          input {
+            width: 70% !important
+          }
+        }
+      }
+
+      .before {
+        font-size: clamp(12px, 1.2rem, 1.5rem);
+      }
+    }
+
+    .post-footer {
+      width: calc(96% - 1px);
+      margin-top: 10px;
+      padding: 5px;
+    }
+
+    .borderw {
+      width: calc(97% - 3px);
+      margin: 10px 0;
+      padding: 5px;
     }
   }
 }
