--- a/src/assets/css/essay.scss
+++ b/src/assets/css/essay.scss
@@ -7,15 +7,15 @@ pre {
   top: 0;
   left: -30px;
   width: 30px;
-  border-right: 1px solid #C3CCD0;
-  background-color: #1C1D21;
+  border-right: 1px solid #c3ccd0;
+  background-color: #1c1d21;
   text-align: center;
   padding: 0.5em 0;
 }
 
 .pre-numbering li {
   list-style: none;
-  color: #AAA;
+  color: #aaa;
   font-size: 1em;
 }
 
@@ -27,19 +27,25 @@ pre {
   user-select: none;
 }
 
-.v-md-prism-language::-webkit-scrollbar-track {
-  background-color: #21252b;
+.v-md-prism-::-webkit-scrollbar-track {
+  background-color: #282c34;
+  cursor: pointer;
 }
 
-.v-md-prism-language::-webkit-scrollbar {
+.v-md-prism-::-webkit-scrollbar {
   height: 15px;
   background-color: var(--themeColor);
+  cursor: pointer;
 }
 
-.v-md-prism-language::-webkit-scrollbar-thumb {
+.v-md-prism-::-webkit-scrollbar-thumb {
   background-color: var(--themeColor);
   border-radius: 300px;
-  border: 4px solid #21252b;
+  border: 4px solid #282c34;
+}
+/* 悬停时的样式 */
+.v-md-prism-::-webkit-scrollbar-thumb:hover {
+  background-color: var(--borderColor); /* 悬停时的滑块背景色 */
 }
 
 code {
@@ -78,8 +84,8 @@ code {
 }
 
 .v-md-prism-language {
-  font-family: 'Fira Code VF';
-  font-variation-settings: 'wght' 430;
+  font-family: "Fira Code VF";
+  font-variation-settings: "wght" 430;
 }
 
 .vuepress-markdown-body {
@@ -92,10 +98,9 @@ code {
     }
   }
 
-  &>div {
+  & > div {
     position: relative;
   }
-
 
   &:not(.custom) a:hover {
     // text-decoration: none;
@@ -118,7 +123,7 @@ code {
     font-size: 1.3em;
     color: #000;
     font-weight: 600;
-    font-family: 'dindin';
+    font-family: "dindin";
   }
 
   h2 {
@@ -127,15 +132,14 @@ code {
     color: #000;
     font-size: 21px;
     font-weight: 600;
-    font-family: 'dindin';
+    font-family: "dindin";
 
     &::before {
       content: "#";
-      color: #FF6D6D;
+      color: #ff6d6d;
       margin-right: 20px;
     }
   }
-
 
   h3 {
     color: #222;
@@ -147,7 +151,6 @@ code {
       color: var(--themeColor);
       margin-right: 20px;
     }
-
   }
 
   h4 {
@@ -160,7 +163,6 @@ code {
       content: "~";
       color: var(--themeColor);
     }
-
   }
 
   & a,
@@ -168,7 +170,7 @@ code {
     color: var(--themeColor);
   }
 
-  a>.v-md-svg-outbound {
+  a > .v-md-svg-outbound {
     color: var(--themeColor);
     vertical-align: text-bottom;
     display: initial;
@@ -216,32 +218,31 @@ code {
     font-size: 1.5rem;
     border-left: 0.2rem solid var(--themeColor);
     background: aliceblue;
-    font-family: 'dindin';
+    font-family: "dindin";
   }
 
   /* 代码类型提示，右上角的 */
-  div[class*=v-md-pre-wrapper-]:before {
+  div[class*="v-md-pre-wrapper-"]:before {
     position: absolute;
     top: 0em;
     right: 1em;
     z-index: 3;
-    color: hsla(0, 0%, 100%, .4);
+    color: hsla(0, 0%, 100%, 0.4);
     font-size: 1.75rem;
   }
 
   .line-number,
   code,
   kbd {
-    font-family: 'Fira Code VF';
-    font-variation-settings: 'wght' 430;
+    font-family: "Fira Code VF";
+    font-variation-settings: "wght" 430;
   }
 
   mark {
-
     padding: 0 5px;
     border-radius: 2px;
     font-size: 16px;
-    font-family: 'dindin';
+    font-family: "dindin";
 
     &.gray {
       background-color: #555;
@@ -277,14 +278,13 @@ code {
 }
 
 .dark {
-
   .vuepress-markdown-body {
     text-shadow: #21252b;
     background: var(--darkBgcolor);
     // box-shadow: 0px 0px 1px 4px #aaa inset;
     border: none;
 
-    &>div {
+    & > div {
       background: var(--darkBgcolor) !important;
     }
 
@@ -301,7 +301,7 @@ code {
       color: #fff;
     }
 
-    .v-md-plugin-tip>p,
+    .v-md-plugin-tip > p,
     .v-md-plugin-tip summary {
       color: #fff !important;
     }
@@ -333,7 +333,6 @@ code {
   }
 }
 
-
 .v-md-editor__toolbar-item--active,
 .v-md-editor__toolbar-item--active:hover,
 .v-md-editor__toolbar-item:hover {
@@ -344,7 +343,7 @@ code {
 .v-md-plugin-tip {
   border-radius: 10px;
   // display: flex;
-  font-family: 'dindin';
+  font-family: "dindin";
 }
 
 .v-md-plugin-tip.tip {
@@ -377,10 +376,10 @@ code {
     max-height: 1000px;
   }
 
-  &>p,
+  & > p,
   summary {
     color: #fff;
   }
 }
 
-@import url('./code.less');
+@import url("./code.scss");
