--- a/src/assets/css/mobile/navtopMobile.scss
+++ b/src/assets/css/mobile/navtopMobile.scss
@@ -1,4 +1,4 @@
-@media (max-width:1280px) {
+@media (max-width:1450px) {
   .navbarContent {
     .navConChild {
       width: 100%;
@@ -7,11 +7,10 @@
   }
 }
 
-@media (max-width: 991px) {
+@media (max-width: 835px) {
   .navbarContent {
     .navConChild {
-      width: 100%;
-      // grid-template-columns: 2fr 0fr 5fr;
+      padding: 0 2rem;
     }
   }
 }
@@ -20,7 +19,6 @@
 
   .navbarContent {
     .navConChild {
-      width: 100%;
       grid-template-columns: 1fr auto;
       justify-content: space-around;
       align-items: center;
@@ -37,10 +35,11 @@
         grid-row: 1/2;
 
         .menu-open-button {
+          cursor: pointer;
           border-radius: 100%;
           height: 60px;
           width: 60px;
-          color: #FFFFFF;
+          color: #000;
           line-height: 60px;
           display: flex;
           align-items: center;
@@ -51,6 +50,8 @@
           width: 25px;
           height: 3px;
           background: #fff;
+          box-shadow: 1px 2px 1px #000,
+            0 0 1px #000000;
           display: block;
           position: absolute;
           transform: scaleX(1);
