--- a/src/assets/css/index.scss
+++ b/src/assets/css/index.scss
@@ -58,7 +58,12 @@ html,
   font-size: 10px;
   margin: 0;
   padding: 0;
-  background-color: #f9f8ff;
+  background-color: #ffffff;
+
+  ::-webkit-scrollbar {
+    width: 0 !important;
+    height: 0 !important;
+  }
 }
 
 a {
@@ -362,9 +367,6 @@ html.dark {
     text-shadow: 1px 2px 1px #000, 0 0 1px #000000
   }
 }
-
-
-
 
 
 @keyframes stroke {
