--- a/src/assets/css/essay.scss
+++ b/src/assets/css/essay.scss
@@ -43,9 +43,11 @@ pre {
   border-radius: 300px;
   border: 4px solid #282c34;
 }
+
 /* 悬停时的样式 */
 .v-md-prism-::-webkit-scrollbar-thumb:hover {
-  background-color: var(--borderColor); /* 悬停时的滑块背景色 */
+  background-color: var(--borderColor);
+  /* 悬停时的滑块背景色 */
 }
 
 code {
@@ -98,7 +100,7 @@ code {
     }
   }
 
-  & > div {
+  &>div {
     position: relative;
   }
 
@@ -170,7 +172,7 @@ code {
     color: var(--themeColor);
   }
 
-  a > .v-md-svg-outbound {
+  a>.v-md-svg-outbound {
     color: var(--themeColor);
     vertical-align: text-bottom;
     display: initial;
@@ -284,7 +286,7 @@ code {
     // box-shadow: 0px 0px 1px 4px #aaa inset;
     border: none;
 
-    & > div {
+    &>div {
       background: var(--darkBgcolor) !important;
     }
 
@@ -301,7 +303,7 @@ code {
       color: #fff;
     }
 
-    .v-md-plugin-tip > p,
+    .v-md-plugin-tip>p,
     .v-md-plugin-tip summary {
       color: #fff !important;
     }
@@ -376,7 +378,7 @@ code {
     max-height: 1000px;
   }
 
-  & > p,
+  &>p,
   summary {
     color: #fff;
   }
