--- a/src/assets/css/index.scss
+++ b/src/assets/css/index.scss
@@ -1,5 +1,6 @@
 :root {
   --themeColor: #5161ce;
+  --themeColorRgb: 81, 97, 206;
   --bgcolor: #fff !important;
   --color: #000 !important;
   --darkBgcolor: rgb(24, 23, 29);
