--- a/src/assets/css/essay.scss
+++ b/src/assets/css/essay.scss
@@ -241,8 +241,7 @@ code {
   }
 
   mark {
-    padding: 0 5px;
-    border-radius: 2px;
+    border-radius: 5px;
     font-size: 16px;
     font-family: "dindin";
 
@@ -262,7 +261,10 @@ code {
     &.black {
       background-color: #000;
       color: #fff;
+      display: inline-block;
       box-shadow: 0 0 5px 1px #a7a7a7;
+      line-height: 19px;
+      padding: 3px 5px;
     }
 
     &.white {
