--- a/src/assets/css/essay.scss
+++ b/src/assets/css/essay.scss
@@ -1,5 +1,8 @@
 pre {
   position: relative;
+  font-family: 'Red Hat Display';
+  font-variant-numeric: tabular-nums;
+  /* 使用等宽特性 */
 }
 
 .pre-numbering {
@@ -85,10 +88,6 @@ code {
   z-index: 2;
 }
 
-.v-md-prism-language {
-  font-family: "Fira Code VF";
-  font-variation-settings: "wght" 430;
-}
 
 .vuepress-markdown-body {
   position: relative;
@@ -236,7 +235,6 @@ code {
   .line-number,
   code,
   kbd {
-    font-family: "Fira Code VF";
     font-variation-settings: "wght" 430;
   }
 
@@ -373,12 +371,8 @@ code {
   padding: 10px;
   box-shadow: 0 0 10px 1px rgb(0 0 0 / 10%);
   transition: 1s;
-  max-height: 100px;
   overflow: hidden;
 
-  &[open] {
-    max-height: 1000px;
-  }
 
   &>p,
   summary {
