修改详情页样式、动画特效

--- a/src/assets/css/animation.css
+++ b/src/assets/css/animation.css
@@ -97,3 +97,24 @@
      translate: 0 0px;
    }
  }
+
+
+ @keyframes wiggle {
+
+   0%,
+   100% {
+     transform: translateY(0) rotate(0);
+   }
+
+   25% {
+     transform: translateY(-1px) rotate(-2deg);
+   }
+
+   50% {
+     transform: translateY(0) rotate(2deg);
+   }
+
+   75% {
+     transform: translateY(1px) rotate(-2deg);
+   }
+ }
