--- a/src/assets/css/about.scss
+++ b/src/assets/css/about.scss
@@ -1,6 +1,6 @@
 .about {
   background-color: var(--themeColor);
-  width: calc(100vw - 20px);
+  width: 100vw;
   height: 100vh;
   overflow: hidden;
   position: relative;
@@ -81,20 +81,14 @@
   }
 
   .waveMain {
-    display: grid;
-    grid-template-rows: 20px 1fr;
+    display: flex;
     position: relative;
+    height: 100%;
   }
 
-  .text {
-    width: 65%;
-    display: block;
-    text-align: left;
-    margin: 0 auto;
-  }
+
 
   .wave {
-    height: 100%;
     width: 80%;
     background-color: #fff;
     padding: 0 10px;
@@ -105,7 +99,23 @@
     overflow-y: hidden;
     overflow-x: auto;
     border: 1px solid #999;
+    justify-content: center;
+    align-items: center;
     filter: hue-rotate(120deg);
+    display: grid;
+    grid-template-rows: 30px 1fr;
+
+    .svg-scroll {
+      width: 100%;
+      height: 100%;
+      overflow-y: hidden;
+      overflow-x: auto;
+    }
+
+    .text {
+      display: block;
+      padding-left: 10px;
+    }
   }
 }
 
@@ -198,7 +208,7 @@
     .content {
       height: 95%;
       width: 95%;
-      grid-template-rows: 140px 500px 1fr;
+      grid-template-rows: 140px 400px 1fr;
     }
 
     .formInfo {
